small edit fixed

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -31,7 +31,7 @@
 
 % Heading 
 % arguments are {volume}{year}{pages}{date submitted}{date published}{paper id}{author-full-names}
-\melbaheading{1}{2020}{1-48}{10/2019}{1/2020}{Yu and Sabuncu}
+\melbaheading{1}{2020}{1-48}{10/2019}{1/2020}{Dalca and Sabuncu}
 
 % Short headings should be {running head} and {authors last names}
 \ShortHeadings{Autoencoder for Shapes of Brain Structures}{Dalca and Sabuncu}
