--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -240,7 +240,7 @@
 \def\firstpageno#1{\setcounter{page}{#1}}
 
 \def\melbaheading#1#2#3#4#5#6{\def\ps@melbatps{\let\@mkboth\@gobbletwo%
-\def\@oddhead{\scriptsize Journal of Machine Learning and Biomedical Imaging #1 (#2) #3 \hfill Submitted #4; Published #5}%
+\def\@oddhead{\scriptsize Journal of Machine Learning for Biomedical Imaging #1 (#2) #3 \hfill Submitted #4; Published #5}%
 \def\@oddfoot{\parbox[t]{\textwidth}{\raggedright \scriptsize \copyright #2 #6.\\[5pt] 
 License: CC-BY 4.0, see \url{https://creativecommons.org/licenses/by/4.0/}. \\ An electronic copy of this paper can be found at \url{http://melba-journal.org/papers/#2/v#1}.\hfill}}
 
