--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -109,8 +109,9 @@ We estimate the deformable template parameters~$\theta_t$ and the deformation fi
 %
 where the first term captures the likelihood of the data and deformations, and the second term controls a prior over the deformation fields.
 
-
-
+\begin{proof}
+    Awesome proof.
+\end{proof}
 
 % Acknowledgements should go at the end, before appendices and references
 
