--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -323,7 +323,7 @@ License: CC-BY 4.0, see \url{https://creativecommons.org/licenses/by/4.0/}. \\ A
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newcommand{\BlackBox}{\rule{1.5ex}{1.5ex}}  % end of proof
-\newenvironment{proof}{\par\noindent{\bf Proof\ }}{\hfill\BlackBox\\[2mm]}
+\newenvironment{proof}{\par\noindent{\bf Proof\ }}{\hfill\BlackBox\\\vspace{2mm}}
 \newtheorem{example}{Example} 
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}[theorem]{Lemma} 
