--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -1,7 +1,8 @@
 \documentclass[twoside,11pt]{article}
 
-% melba package
-% use option 'submission' for submission. 
+% melba package. use options:
+% - 'submission' for submission. 
+% - 'final' for accepted papers
 \usepackage[submission]{melba}  
 
 
@@ -40,7 +41,7 @@
 %  author-full-names: Last names of all the authors, separated by commas or 'and' before final author.
 %  special-issue-title: If part of a special issue, name of the issue *as given by the Associate Editor*. Otherwise, leave blank.
 %  special-issue-editors: If part of a special issue, editors of the issue *as given by the Associate Editor*. Otherwise, leave blank.
-\melbaheading{0}{https://www.melba-journal.org/article/XX-AA}{2020}{1-2}{7/2020}{10/2020}{Dalca and Sabuncu}{}{}
+\melbaheading{0}{https://www.melba-journal.org/article/XX-AA}{2020}{1-?}{mm/yyyy}{mm/yyyy}{Dalca and Sabuncu}{}{}
 
 % Short headings should be {running head} and {authors last names}
 \ShortHeadings{Autoencoder for Shapes of Brain Structures}{Dalca and Sabuncu}
