Swap order of references and appendix (references should be first)

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -143,11 +143,11 @@ where the first term captures the likelihood of the data and deformations, and t
 \coi{The conflicts of interest have not been entered yet.}
 
 
+\bibliography{sample}
 
 % Manual newpage inserted to improve layout of sample file - not
-% needed in general before appendices/bibliography.
+% needed in general before appendices.
 % \newpage
-
 \appendix % optional
 \section*{Appendix A.}
 
@@ -158,8 +158,5 @@ In this appendix we prove the central theorem and present additional experimenta
 
 {\noindent \em Remainder omitted in this sample. }
 
-
-\vskip 0.2in
-\bibliography{sample}
 
 \end{document}
