--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -1,4 +1,6 @@
-%
+% v1.01
+% For any question, please contact publishing-editor@melba-journal.org
+
 % This style file was based on the JLMR style file.
 \usepackage{amsmath}
 \usepackage{lineno} % for line numbers. TODO: make this opnly called in submission
