Rename 'final' option to 'accepted'

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -2,7 +2,7 @@
 
 % melba package. use options:
 % - 'submission' for submission.
-% - 'final' for MELBA accepted papers only
+% - 'accepted' for MELBA accepted papers only
 \usepackage[submission]{melba}
 
 
