Do not display the year before the ID in the headings

--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -259,14 +259,14 @@
 		\expandafter\endgroup
 	\ifx\param\empty
 		\def\@oddhead{\parbox[t]{\textwidth}
-			{\scriptsize \href{http://www.melba-journal.org}{Journal of Machine Learning for Biomedical Imaging}. #3:#1. pp #4 
+			{\scriptsize \href{http://www.melba-journal.org}{Journal of Machine Learning for Biomedical Imaging}. #1. pp #4
 				\hfill Submitted #5; Published #6}}%
 		\def\@oddfoot{\parbox[t]{\textwidth}
 			{\raggedright \scriptsize \copyright #3 #7. License: \href{https://creativecommons.org/licenses/by/4.0/}{CC-BY 4.0}. \\
 			\url{#2}. \hfill}}
 	\else
 		\def\@oddhead{\parbox[t]{\textwidth}
-			{\scriptsize \href{http://www.melba-journal.org}{Journal of Machine Learning for Biomedical Imaging}. #3:#1. pp #4  \hfill Submitted #5; Published #6 \\ 
+			{\scriptsize \href{http://www.melba-journal.org}{Journal of Machine Learning for Biomedical Imaging}. #1. pp #4  \hfill Submitted #5; Published #6 \\
 				Special Issue: #8 }}%
 		\def\@oddfoot{\parbox[t]{\textwidth}
 			{\raggedright \vspace{-0.5cm} \scriptsize \copyright #3 #7. License: \href{https://creativecommons.org/licenses/by/4.0/}{CC-BY 4.0}. \\
