--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -34,14 +34,13 @@
 % Publications instructions for authors of FINAL ACCEPT papers, before uploading final proof to scholastica:
 %  article-id: This is provided upon acceptance from the Associate Editor
 %  article-link: This is provided upon acceptance from the Associate Editor
-%  year: the year of publication (the year you plan to upload to arXiv the final version)
 %  pages: "1-X" where X is the number of pages in this final paper (including appendices)
 %  date-submitted: Date submitted to MELBA: mm/yyyy
 %  date-published: Today's date: mm/yyyy
 %  author-full-names: Last names of all the authors, separated by commas or 'and' before final author.
 %  special-issue-title: If part of a special issue, name of the issue *as given by the Associate Editor*. Otherwise, leave blank.
 %  special-issue-editors: If part of a special issue, editors of the issue *as given by the Associate Editor*. Otherwise, leave blank.
-\melbaheading{0}{https://www.melba-journal.org/article/XX-AA}{2020}{1-?}{mm/yyyy}{mm/yyyy}{Dalca and Sabuncu}{}{}
+\melbaheading{YYYY:NNN}{https://www.melba-journal.org/article/XX-AA}{YYYY}{1-?}{mm/yyyy}{mm/yyyy}{Dalca and Sabuncu}{}{}
 
 % Short headings should be {running head} and {authors last names}
 \ShortHeadings{Autoencoder for Shapes of Brain Structures}{Dalca and Sabuncu}
