Rework the logic of submission/accepted option

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -1,9 +1,8 @@
 \documentclass[twoside,11pt]{article}
 
 % melba package. use options:
-% - 'submission' for submission.
-% - 'accepted' for MELBA accepted papers only
-\usepackage[submission]{melba}
+% - 'accepted' for MELBA _accepted_ papers **only**
+\usepackage{melba}
 
 
 
