--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -266,10 +266,10 @@
 	\else
 		\def\@oddhead{\parbox[t]{\textwidth}
 			{\scriptsize \href{http://www.melba-journal.org}{Journal of Machine Learning for Biomedical Imaging}. #1. pp #4  \hfill Submitted #5; Published #6 \\
-				Special Issue: #8 }}%
+				Special Issue: #8 \\
+        Guest Editors: #9 }}%
 		\def\@oddfoot{\parbox[t]{\textwidth}
-			{\raggedright \vspace{-0.5cm} \scriptsize \copyright #3 #7. License: \href{https://creativecommons.org/licenses/by/4.0/}{CC-BY 4.0}. \\
-				Guest Editors: #9 \\
+			{\raggedright \scriptsize \copyright #3 #7. License: \href{https://creativecommons.org/licenses/by/4.0/}{CC-BY 4.0}. \\
 			\url{#2}. \hfill}}
 	\fi
 \else
