Make heading instructions a bit more explicit

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -26,20 +26,22 @@
 \newcommand{\fracpartial}[2]{\frac{\partial #1}{\partial  #2}}
 
 
-% Heading for publication (ignore during submission).
+% Header and footer (will be filled at publication)
 % arguments are:
-% {article-id}{year}{pages}{date submitted}{date published}{author-full-names}{special-issue-title}{special-issue-editors}
+% {article-id}{article-link}{year}{pages}{date submitted}{date published}{author-full-names}{special-issue-title}{special-issue-editors}
+% At submission, fill only the year and author-full-names
 %
 % Publications instructions for authors of FINAL ACCEPT papers, before uploading final proof to scholastica:
 %  article-id: This is provided upon acceptance from the Associate Editor
 %  article-link: This is provided upon acceptance from the Associate Editor
+%  year: the submission year
 %  pages: "1-X" where X is the number of pages in this final paper (including appendices)
 %  date-submitted: Date submitted to MELBA: mm/yyyy
 %  date-published: Today's date: mm/yyyy
 %  author-full-names: Last names of all the authors, separated by commas or 'and' before final author.
 %  special-issue-title: If part of a special issue, name of the issue *as given by the Associate Editor*. Otherwise, leave blank.
 %  special-issue-editors: If part of a special issue, editors of the issue *as given by the Associate Editor*. Otherwise, leave blank.
-\melbaheading{YYYY:NNN}{https://www.melba-journal.org/article/XX-AA}{YYYY}{1-?}{mm/yyyy}{mm/yyyy}{Dalca and Sabuncu}{}{}
+\melbaheading{YYYY:NNN}{https://www.melba-journal.org/article/XX-AA}{YYYY}{1-?}{m1/yyyy}{m2/yyyy}{Dalca and Sabuncu}{}{}
 
 % Short headings should be {running head} and {authors last names}
 \ShortHeadings{Autoencoder for Shapes of Brain Structures}{Dalca and Sabuncu}
