--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -5,6 +5,7 @@
 \usepackage{melba}
 
 \usepackage{mwe} % to get dummy images, only for the example
+% Can be removed for actual manuscripts
 
 
 % Any additional packages needed should be included after jmlr2e.
@@ -62,7 +63,7 @@
 
 
 
-
+% Indendation is not mandatory, but usually makes the code more readable
 \begin{document}
 
 % top matter
@@ -70,22 +71,20 @@
 
 % abstract
 \begin{abstract}%   <- trailing '%' for backward compatibility of .sty file
-We develop a learning framework for building deformable templates, which play a fundamental role in many image analysis and computational anatomy tasks. Conventional methods for template creation and image alignment to the template have undergone decades of rich technical development. In these frameworks, templates are constructed using an iterative process of template estimation and alignment, which is often computationally very expensive. Due in part to this shortcoming, most methods compute a single template for the entire population of images, or a few templates for  specific sub-groups of the data. In this work, we present a probabilistic model and efficient learning strategy that yields either universal or \textit{conditional} templates, jointly with a neural network that provides efficient alignment of the images to these templates. We demonstrate the usefulness of this method on a variety of domains, with a special focus on neuroimaging. This is particularly useful for clinical applications where a pre-existing template does not exist, or creating a new one with traditional methods can be prohibitively expensive.
-%
-Our code is available at~\url{http://yoururl.com}.
+	We develop a learning framework for building deformable templates, which play a fundamental role in many image analysis and computational anatomy tasks. Conventional methods for template creation and image alignment to the template have undergone decades of rich technical development. In these frameworks, templates are constructed using an iterative process of template estimation and alignment, which is often computationally very expensive. Due in part to this shortcoming, most methods compute a single template for the entire population of images, or a few templates for  specific sub-groups of the data. In this work, we present a probabilistic model and efficient learning strategy that yields either universal or \textit{conditional} templates, jointly with a neural network that provides efficient alignment of the images to these templates. We demonstrate the usefulness of this method on a variety of domains, with a special focus on neuroimaging. This is particularly useful for clinical applications where a pre-existing template does not exist, or creating a new one with traditional methods can be prohibitively expensive.
+	%
+	Our code is available at~\url{http://yoururl.com}.
 \end{abstract}
 
 % keywords
 \begin{keywords}
-  Machine Learning, Image Registration
+	Machine Learning, Image Registration
 \end{keywords}
-
 
 
 % Introduction (or first section)
 \section{Introduction}
-
-A deformable template is an image that can be geometrically deformed to match images in a dataset, providing a common reference frame. Templates are a powerful tool that enables the analysis of geometric variability. They have been used in computer vision, medical image analysis, graphics, and time series signals.
+	A deformable template is an image that can be geometrically deformed to match images in a dataset, providing a common reference frame. Templates are a powerful tool that enables the analysis of geometric variability. They have been used in computer vision, medical image analysis, graphics, and time series signals.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -94,71 +93,66 @@ A deformable template is an image that can be geometrically deformed to match im
 % Make sure to put your work into context and include apporpriate citations.
 % We do not have limits on citation counts.
 \section{Related Works}
+	Spatial alignment, or registration, between two images is a building block for estimation of deformable templates. Alignment usually involves two steps: a global affine transformation, and a deformable transformation (as in many optical flow applications).
 
-Spatial alignment, or registration, between two images is a building block for estimation of deformable templates. Alignment usually involves two steps: a global affine transformation, and a deformable transformation (as in many optical flow applications).
-
-Use \verb|\cite{}| for reference that is part of the sentence, and \verb|\citep{}| for references in parenthesis. For example, \cite{viola1997alignment} is awesome. Also, this is a citation~\citep{viola1997alignment}.
+	Use \verb|\cite{}| for reference that is part of the sentence, and \verb|\citep{}| for references in parenthesis. For example, \cite{viola1997alignment} is awesome. Also, this is a citation~\citep{viola1997alignment}.
 
 
 
 % A methodological, model, or similar section often comes here.
 \section{Methods}
+	\subsection{Equations}
+		We estimate the deformable template parameters~$\theta_t$ and the deformation fields for every data point using maximum likelihood. Letting~$\mathcal{V} = \{\boldsymbol{v}_i\}$ and~$\mathcal{A} = \{a_i\}$,
+		%
+		\begin{align}
+			\hat{\theta_t}, \hat{\mathcal{V}} &= \arg \max_{\theta_t, \mathcal{V}} \log p_{\theta_t}(\mathcal{V} | \mathcal{X},  \mathcal{A}) \nonumber \\
+			&= \arg \max_{\theta_t, \mathcal{V}} \log p_{\theta_t}(\mathcal{X} | \mathcal{V}; \mathcal{A}) + \log p(\mathcal{V}),
+			\label{eq:logpost}
+		\end{align}
+		%
+		where the first term captures the likelihood of the data and deformations, and the second term controls a prior over the deformation fields.
 
-\subsection{Equations}
+		\begin{proof}
+			Awesome proof.
+		\end{proof}
 
-We estimate the deformable template parameters~$\theta_t$ and the deformation fields for every data point using maximum likelihood. Letting~$\mathcal{V} = \{\boldsymbol{v}_i\}$ and~$\mathcal{A} = \{a_i\}$,
-%
-\begin{align}
-\hat{\theta_t}, \hat{\mathcal{V}} &= \arg \max_{\theta_t, \mathcal{V}} \log p_{\theta_t}(\mathcal{V} | \mathcal{X},  \mathcal{A}) \nonumber \\
-&= \arg \max_{\theta_t, \mathcal{V}} \log p_{\theta_t}(\mathcal{X} | \mathcal{V}; \mathcal{A}) + \log p(\mathcal{V}),
-\label{eq:logpost}
-\end{align}
-%
-where the first term captures the likelihood of the data and deformations, and the second term controls a prior over the deformation fields.
+	\subsection{Math styles}
+		Different font styles can be used for equations:
+		\begin{itemize}
+			\item \verb|$a b c A B C 1 2 3$|: $ a b c A B C 1 2 3 $
+			\item \verb|$\mathbf{a b c A B C 1 2 3}$|: $ \mathbf{a b c A B C 1 2 3} $
+			\item \verb|$\mathfrak{a b c A B C 1 2 3}$|: $ \mathfrak{a b c A B C 1 2 3} $
+			\item \verb|$\mathcal{ABC}$|: $ \mathcal{ABC} $
+			\item \verb|$\mathbb{ABC}$|: $ \mathbb{ABC} $
+		\end{itemize}
 
-\begin{proof}
-    Awesome proof.
-\end{proof}
-
-\subsection{Math styles}
-Different font styles can be used for equations:
-\begin{itemize}
-	\item \verb|$a b c A B C 1 2 3$|: $ a b c A B C 1 2 3 $
-	\item \verb|$\mathbf{a b c A B C 1 2 3}$|: $ \mathbf{a b c A B C 1 2 3} $
-	\item \verb|$\mathfrak{a b c A B C 1 2 3}$|: $ \mathfrak{a b c A B C 1 2 3} $
-	\item \verb|$\mathcal{ABC}$|: $ \mathcal{ABC} $
-	\item \verb|$\mathbb{ABC}$|: $ \mathbb{ABC} $
-\end{itemize}
-
-Text and names in equations should be dealt with the \verb|\text| command, for instance:
-
-\noindent \verb|$\mathcal L_{\text{SuperLoss}}$|: $\mathcal L_{\text{SuperLoss}}$ and not $\mathcal L_{SuperLoss}$.
+		Text and names in equations should be dealt with the \verb|\text| command, for instance:\\
+		\verb|$\mathcal L_{\text{SuperLoss}}$|: $\mathcal L_{\text{SuperLoss}}$ and not $\mathcal L_{SuperLoss}$.
 
 
 
 \section{Section}
-\subsection{Subsection}
-\subsubsection{Subsubsection}
-\paragraph{Paragraph} Ex culpa ut commodo proident esse excepteur mollit in sed aliqua fugiat sed cupidatat dolor sint quis veniam amet aute ea fugiat quis do excepteur sunt commodo magna cupidatat veniam minim anim mollit do enim et nostrud ad esse velit nisi est dolor do ut dolore excepteur nulla ex sunt exercitation consequat ullamco ad in fugiat ut ut enim adipisicing cillum nisi anim ullamco ullamco nisi esse aute dolore amet nisi adipisicing dolor dolore do ut aliqua in sunt aliqua tempor duis amet ut non adipisicing nostrud ex ullamco excepteur culpa anim est minim fugiat laborum ex irure consectetur eu in reprehenderit sint magna ut consequat laborum ex minim laboris culpa amet incididunt laborum laborum dolore nulla cupidatat dolore in aliqua ut eu in magna sunt eiusmod est labore sit eu incididunt fugiat in culpa pariatur voluptate duis id velit sunt reprehenderit pariatur amet esse dolore minim non fugiat fugiat amet incididunt commodo sit dolor.
+	\subsection{Subsection}
+		\subsubsection{Subsubsection}
+			\paragraph{Paragraph} Ex culpa ut commodo proident esse excepteur mollit in sed aliqua fugiat sed cupidatat dolor sint quis veniam amet aute ea fugiat quis do excepteur sunt commodo magna cupidatat veniam minim anim mollit do enim et nostrud ad esse velit nisi est dolor do ut dolore excepteur nulla ex sunt exercitation consequat ullamco ad in fugiat ut ut enim adipisicing cillum nisi anim ullamco ullamco nisi esse aute dolore amet nisi adipisicing dolor dolore do ut aliqua in sunt aliqua tempor duis amet ut non adipisicing nostrud ex ullamco excepteur culpa anim est minim fugiat laborum ex irure consectetur eu in reprehenderit sint magna ut consequat laborum ex minim laboris culpa amet incididunt laborum laborum dolore nulla cupidatat dolore in aliqua ut eu in magna sunt eiusmod est labore sit eu incididunt fugiat in culpa pariatur voluptate duis id velit sunt reprehenderit pariatur amet esse dolore minim non fugiat fugiat amet incididunt commodo sit dolor.
 
 \section{Table and Figures}
+	\begin{table}[h] % h for Here, t for Top, b for Bottom
+		\centering
+		\caption{By convention, Table caption goes on top.}
+		\begin{tabular}{lcr}
+			\textbf{Left} & \textbf{center} & \textbf{right} \\
+			\hline
+			111 & 222 & 333 \\
+			444 & 555 & 666
+		\end{tabular}
+	\end{table}
 
-\begin{table}[h] % h for Here, t for Top, b for Bottom
-	\centering
-	\caption{By convention, Table caption goes on top.}
-	\begin{tabular}{lcr}
-		\textbf{Left} & \textbf{center} & \textbf{right} \\
-		\hline
-		111 & 222 & 333 \\
-		444 & 555 & 666
-	\end{tabular}
-\end{table}
-
-\begin{figure}[h]
-	\centering
-	\includegraphics[width=0.5\linewidth]{example-image}
-	\caption{Example figure. Notice that the caption goes below.}
-\end{figure}
+	\begin{figure}[h]
+		\centering
+		\includegraphics[width=0.5\linewidth]{example-image}
+		\caption{Example figure. Notice that the caption goes below.}
+	\end{figure}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -189,13 +183,11 @@ Text and names in equations should be dealt with the \verb|\text| command, for i
 % \newpage
 \appendix % optional
 \section*{Appendix A.}
+	In this appendix we prove the central theorem and present additional experimental results.
+	\noindent
 
 
-In this appendix we prove the central theorem and present additional experimental results.
-\noindent
-
-
-{\noindent \em Remainder omitted in this sample. }
+	{\noindent \em Remainder omitted in this sample. }
 
 
 \end{document}
