Update readme instructions, make it more consistent with latex template

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -30,7 +30,7 @@
 % Header and footer (will be filled at publication)
 % arguments are:
 % {article-id}{article-link}{year}{pages}{date submitted}{date published}{author-full-names}{special-issue-title}{special-issue-editors}
-% At submission, fill only the year and author-full-names
+% At submission, authors can optionally fill the year and author-full-names (any other information will not be displayed)
 %
 % Publications instructions for authors of FINAL ACCEPT papers, before uploading final proof to scholastica:
 %  article-id: This is provided upon acceptance from the Associate Editor
@@ -53,7 +53,7 @@
 % If the title spans several lines, authors could decide where the title should be split using \\
 \title{An Inspiring Title \\ for the MELBA Journal Sample Article}
 
-
+% For very long author lists, please contact the publishing editor for instructions publishing-editor@melba-journal.org (this is usually dealt on a case-by-case basis).
 \author{\name Adrian V. Dalca \email adalca@mit.edu \\  % start right after \author{, or there will be an extra space
 	\addr EECS, Massachusetts Institute of Technology, Cambridge, MA, USA
 	\AND
