Add arxiv option: disable line numbers but do not show header
Recompile samples, add arxiv sample

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -1,7 +1,8 @@
 \documentclass[twoside,11pt]{article}
 
 % melba package. use options:
-% - 'accepted' for MELBA _accepted_ papers **only**
+% - 'accepted' for MELBA _accepted_ papers **only**;
+% - 'arxiv-submission' for arxiv pre-print **before acceptance**.
 \usepackage{melba}
 
 \usepackage{mwe} % to get dummy images, only for the example
