--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -182,13 +182,24 @@
 % Manual newpage inserted to improve layout of sample file - not
 % needed in general before appendices.
 % \newpage
-\appendix % optional
-\section*{Appendix A.}
+
+% Appendix is optional
+\appendix
+\section{Proof of the central theorem}
 	In this appendix we prove the central theorem and present additional experimental results.
 	\noindent
 
 
 	{\noindent \em Remainder omitted in this sample. }
 
+\section{Section}
+	\subsection{Subsection}
+		\subsubsection{Subsubsection}
+			\paragraph{Paragraph} Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 \end{document}
