Add the \clearpage before the appendix

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -184,6 +184,7 @@
 % \newpage
 
 % Appendix is optional
+\clearpage
 \appendix
 \section{Proof of the central theorem}
 	In this appendix we prove the central theorem and present additional experimental results.
