Add orcid command and example

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -58,7 +58,7 @@
 \author{\name Adrian V. Dalca \email adalca@mit.edu \\  % start right after \author{, or there will be an extra space
 	\addr EECS, Massachusetts Institute of Technology, Cambridge, MA, USA
 	\AND
-	\name Mert R. Sabuncu \email msabuncu@cornell.edu \\
+	\name Mert R. Sabuncu\orcid{0000-1111-2222-3333} \email msabuncu@cornell.edu \\
 	\addr School of Electrical and Computer Engineering, Cornell University, Ithaca, NY, USA
 }
 
