--- a/latex/melba.sty
+++ b/latex/melba.sty
@@ -239,6 +239,8 @@
 %\def\editor#1{\gdef\@editor{#1}}
 %\def\editors#1{\gdef\@editors{#1}}
 
+\def\orcid#1{\textsuperscript{~\tiny\url{https://orcid.org/#1}}}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%
 %%% Pagestyle
