Add commented option to draw borders, during debugging

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -20,6 +20,7 @@
 
 % often used packages
 \usepackage{amsmath,amsfonts}
+% \usepackage[pass, showframe]{geometry}  % Draw borders on pdf, useful to debug figures placement
 
 % add packages here
 
