--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -1,8 +1,9 @@
 \documentclass[twoside,11pt]{article}
 
 % melba package. use options:
+% - 'arxiv' in arXiv pre-print in submission (disable line numbers)
 % - 'accepted' for MELBA _accepted_ papers **only**;
-% - 'arxiv-submission' for arxiv pre-print **before acceptance**.
+% - 'specialissue' for MELBA accepted papers that are part of a special issue.
 \usepackage{melba}
 
 \usepackage{mwe} % to get dummy images, only for the example
@@ -30,25 +31,23 @@
 
 
 % Header and footer (will be filled at publication)
-% arguments are:
-% {article-id}{article-link}{year}{pages}{date submitted}{date published}{author-full-names}{special-issue-title}{special-issue-editors}
-% At submission, authors can optionally fill the year and author-full-names (any other information will not be displayed)
-%
-% Publications instructions for authors of FINAL ACCEPT papers, before uploading final proof to scholastica:
-%  article-id: This is provided upon acceptance from the Associate Editor
-%  article-link: This is provided upon acceptance from the Associate Editor
-%  year: the submission year
-%  pages: "1-X" where X is the number of pages in this final paper (including appendices)
-%  date-submitted: Date submitted to MELBA: mm/yyyy
-%  date-published: Today's date: mm/yyyy
-%  author-full-names: Last names of all the authors, separated by commas or 'and' before final author.
-%  special-issue-title: If part of a special issue, name of the issue *as given by the Associate Editor*. Otherwise, leave blank.
-%  special-issue-editors: If part of a special issue, editors of the issue *as given by the Associate Editor*. Otherwise, leave blank.
-\melbaheading{YYYY:NNN}{https://www.melba-journal.org/article/XX-AA}{YYYY}{1-?}{m1/yyyy}{m2/yyyy}{Dalca and Sabuncu}{}{}
+\melbaid{YYYY:NNN}  % This is provided upon by the publishing editor
+\melbaauthors{Dalca and Sabuncu}
+\volume{2}
+\firstpageno{1337}  % Communicated by the publishing editor
+\year{YYYY}  % The publication year
+% \datesubmitted{m1/yyyy}  % Date submitted to MELBA: mm/yyyy
+% \datepublished{m2/yyyy}  % Today's date: mm/yyyy\
+
+% The following is optionnal, only if you are publishing in a special issue
+% The information is available on the README.md of this repository
+% https://github.com/melba-journal/submission#special-issues
+% \melbaspecialissue{Medical Imaging with Deep Learning (MIDL) 2020}
+% \melbaspecialissueeditors{Marleen de Bruijne, Tal Arbel, Ismail Ben Ayed, Hervé Lombaert}
+
 
 % Short headings should be {running head} and {authors last names}
 \ShortHeadings{Autoencoder for Shapes of Brain Structures}{Dalca and Sabuncu}
-\firstpageno{1}
 
 
 % Title
