Add optionnal \firstname \surname macro in author list

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -55,7 +55,9 @@
 \title{An Inspiring Title \\ for the MELBA Journal Sample Article}
 
 % For very long author lists, please contact the publishing editor for instructions publishing-editor@melba-journal.org (this is usually dealt on a case-by-case basis).
-\author{\name Adrian V. Dalca \email adalca@mit.edu \\  % start right after \author{, or there will be an extra space
+% \firstname and \surname are optionnal, (simply using \name is doable), but can be useful
+% to clarify names such as \firstname FIRSTNAME MIDDLE NAME \surname FAMILYNAME or composed names
+\author{\firstname Adrian V. \surname Dalca \email adalca@mit.edu \\  % start right after \author{, or there will be an extra space
 	\addr EECS, Massachusetts Institute of Technology, Cambridge, MA, USA
 	\AND
 	\name Mert R. Sabuncu\orcid{0000-1111-2222-3333} \email msabuncu@cornell.edu \\
