Add command to color revised text: \revision{}

--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -157,6 +157,16 @@
 		\caption{Example figure. Notice that the caption goes below.}
 	\end{figure}
 
+\section{Revision}
+		We provide, in \verb|melba.sty| a helpful command to color modifications after a revision: \verb|\revision{}|. It is automatically de-activated for papers compiled with the \verb|accepted|, \verb|arxiv| or \verb|specialissue| options.
+
+	\revision{
+		\subsection{It can also color whole sections and paragraphs}
+			Adipisicing laborum in officia veniam in officia dolor reprehenderit ut ea sed ea reprehenderit veniam veniam culpa commodo velit commodo cillum laborum magna esse duis laboris esse in esse laborum consequat esse cupidatat.
+
+			Lorem ipsum exercitation voluptate adipisicing esse cupidatat sint do excepteur laboris nisi anim mollit ut adipisicing velit quis sunt minim ut deserunt pariatur id amet elit consectetur incididunt occaecat ad labore sit in magna eiusmod.
+	}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Mandatory Sections. Please complete, especially for final publication
