--- a/latex/melba-sample.tex
+++ b/latex/melba-sample.tex
@@ -32,7 +32,7 @@
 
 % Header and footer (will be filled at publication)
 \melbaid{YYYY:NNN}  % This is provided upon by the publishing editor
-\melbaauthors{Dalca and Sabuncu}
+\melbaauthors{Dalca and Sabuncu}  % Note: this one is also used to set the pdf 'authors' metadata
 \volume{2}
 \firstpageno{1337}  % Communicated by the publishing editor
 \year{YYYY}  % The publication year
@@ -52,6 +52,7 @@
 
 % Title
 % If the title spans several lines, authors could decide where the title should be split using \\
+% This will cause a warning from the hyperref package, when it sets the title as pdf 'title' metadata
 \title{An Inspiring Title \\ for the MELBA Journal Sample Article}
 
 % For very long author lists, please contact the publishing editor for instructions publishing-editor@melba-journal.org (this is usually dealt on a case-by-case basis).
